--- a/views/intro_task2.ejs
+++ b/views/intro_task2.ejs
@@ -104,6 +104,18 @@
 
         // // Uruchom pasek postępu
         // startProgressBar(loadingDuration);
+
+            // Nasłuchiwanie zdarzenia cofnięcia w przeglądarce
+        window.onpopstate = function () {
+            alert("Nie możesz wrócić do poprzedniej strony. Przekierowanie do strony głównej.");
+            window.location.href = "/register";  // Przekierowanie lub inna strona zabezpieczająca
+        };
+        // Zapobiegaj zapisywaniu tej strony w historii
+        history.pushState(null, null, location.href);
+        window.addEventListener('popstate', function () {
+            history.pushState(null, null, location.href);
+        });
+        
     </script>
 </body>
 </html>
