--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -64,6 +64,12 @@
     </style>
 </head>
 <body>
+
+
+    <% if (completedTasks && completedTasks.includes('task7')) { %>
+        <p>To zadanie zostało już ukończone.</p>
+      <% } 
+      else { %> 
     <div class="task-container">
         <h1>Zakupy</h1>
         
@@ -90,12 +96,17 @@
 
             <button type="submit" class="submit-btn">Przejdź do zakupu</button>
             <input type="hidden" name="timeout" id="timeout" value="false">
+            <input type="hidden" name="taskToken" value="<%= taskToken %>">
         </form>
          <!-- Pasek postępu -->
          <div class="progress">
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </div>
+    <% } %>
+
+
+
 </body>
 </html>
 <script>
