--- a/views/register.html
+++ b/views/register.html
@@ -76,6 +76,7 @@
                     <option value="3">Ekonomia</option>
                     <option value="4">Humanistyka</option>
                     <option value="5">Zarządzanie</option>
+                    <option value="6">Architektura</option>
                 </select>
             </div>
 
