--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,7 +37,7 @@
             <h1>Rejestracja użytkownika</h1>
             <p class="text-muted">Zaraz weźmiesz udział w badaniu, które ma za zadanie sprawdzić Twoją odporność na działanie 
                 znanych metod manipulujących używanych przez programistów i projektantów stron WWW. W badaniu zasymulowane są procesy zakupowe, których dokonujesz każdego 
-                dnia na różnych stronach internetowych. Prosimy o wczucie się w kontekst każdego. Prosimy również o nieodświeżanie przeglądarki.
+                dnia na różnych stronach internetowych. Prosimy o wczucie się w kontekst każdego zadania. Prosimy również o nieodświeżanie przeglądarki, czy cofanie karty.
             </p>
         </div>
         <form action="/register" method="POST">
