--- a/views/task4.ejs
+++ b/views/task4.ejs
@@ -69,7 +69,9 @@
 <body>
 
     <% if (completedTasks && completedTasks.includes('task4')) { %>
-        <p>To zadanie zostało już ukończone.</p>
+        <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
+            <a href="/register">strony rejestracji</a>.
+        </p>
      <% } 
      else { %>
     <div class="task-container">
