--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -67,7 +67,9 @@
 
 
     <% if (completedTasks && completedTasks.includes('task7')) { %>
-        <p>To zadanie zostało już ukończone.</p>
+        <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
+            <a href="/register">strony rejestracji</a>.
+        </p>
       <% } 
       else { %> 
     <div class="task-container">
