--- a/views/task8.ejs
+++ b/views/task8.ejs
@@ -77,7 +77,9 @@
 <body>
 
     <% if (completedTasks && completedTasks.includes('task8')) { %>
-        <p>To zadanie zostało już ukończone.</p>
+        <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
+            <a href="/register">strony rejestracji</a>.
+        </p>
       <% } 
      else { %>
     <div class="task-container">
