--- a/views/task6.ejs
+++ b/views/task6.ejs
@@ -74,7 +74,9 @@
 <body>
 
     <% if (completedTasks && completedTasks.includes('task6')) { %>
-        <p>To zadanie zostało już ukończone.</p>
+        <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
+            <a href="/register">strony rejestracji</a>.
+        </p>
       <% } 
       else { %>
     <div class="task-container">
